@@ -1,3 +1,8 @@
+2001-10-06  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actorio.cc,intrinsics.cc,actors.h,flags.h,etc:  Started
+	implementing temperature and 'freeze' flag.  No effect yet.
+
 2001-10-06  Dancer Vesperman  <dancer@users.sourceforge.net>
 
 	* actors.cc: Cast conversions
